# sds1730-final-project

./: .gitignore  README.md  final_project.ipynb  llm_experiment.ipynb  pyproject.toml  run_cross_validation.py
data/: README.md  build_dataset.py  llm_experiment_results.json
data/raw/: AKPCPI.csv  AKPOP.csv  AKSTHPI.csv  AKUR.csv  ALPCPI.csv  ALPOP.csv  ALSTHPI.csv  ALUR.csv  ARPCPI.csv  ARPOP.csv  ARSTHPI.csv  ARUR.csv  AZPCPI.csv  AZPOP.csv  AZSTHPI.csv  AZUR.csv  CAPCPI.csv  CAPOP.csv  CASTHPI.csv  CAUR.csv  COPCPI.csv  COPOP.csv  COSTHPI.csv  COUR.csv  CTPCPI.csv  CTPOP.csv  CTSTHPI.csv  CTUR.csv  DCPCPI.csv  DCPOP.csv  DCSTHPI.csv  DCUR.csv  DEPCPI.csv  DEPOP.csv  DESTHPI.csv  DEUR.csv  FLPCPI.csv  FLPOP.csv  FLSTHPI.csv  FLUR.csv  (+164 more)
data/traces/: split_00_real.md
prompt-optimizer/: .gitignore  bunfig.toml  data_utils.py  index.html  local_interpreter.py  metric.py  optimize.py  package.json  server.ts  signatures.py  smoke_test.py
prompt-optimizer/traces/: events.jsonl
prompts/: GEPA_reflection_template.md  chat_predict.md  chat_predict_zero_minimal.md  crash_predictor.md  review_predictions_minimal.md  reward_hacked.md  rlm.md
results/: claude-opus46-predict-split0.md  gemini-pro-predict-split0.md  gepa-rlm-flash-split0.md  gepa-run-1-reward-hacking.md  gepa-run-2-constrained-teacher.md  gpt54-heavy-predict-split0.md  gpt54-heavy-tools-split0.md  gpt54-pro-predict-split0.md  llm_experiment_results.json  smoke_test_rlm.md  zero_data_results.json
results/cv_traces/: split_00_real.md  split_00_shuffled.md  split_00_zero.md  split_01_real.md  (+56 more)
