[project]
name = "sds1730-final-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1",
    "gepa>=0.0.26",
    "litellm>=1.83",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "pandas>=3.0",
    "pydantic>=2.12",
    "python-dotenv>=1.0",
    "scipy>=1.17",
    "seaborn>=0.13",
]

[tool.uv]
dev-dependencies = [
    "quarto-cli",
]
